<resources>
    <string name="app_name">IOU</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="submit">Login</string>
    <string name="enter_email">Please Enter E-Mail Address</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="invalid_input">The E-Mail address you entered is not valid</string>
    <string name="invalid_credentials">This E-Mail and password is not registered with us.</string>
    <string name="add_expense">Add Expense</string>
    <string name="title">Title*</string>
    <string name="date">Date (MMM dd yyyy)*</string>
    <string name="amount">Amount(INR)*</string>
    <string name="description">Description</string>
    <string name="save_expense">Save Expense</string>
    <string name="expense_date">Expense date</string>
    <string name="split_equally_with">Split equally with</string>
    <string name="expense_paid_by">Paid By</string>
    <string name="expense_description">Expense description</string>
    <string name="expense_amount">Total expense amount</string>
    <string name="everyone_equally">Everyone Equally</string>
    <string name="you">You</string>
    <string name="paid_by">Paid By:</string>
    <string name="shared_by">Shared By:</string>
    <string name="mandatory_field">Mandatory Field</string>
    <string name="amount_should_not_zero">Amount should be greater than 0</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout?</string>

    <string name="delete">Delete Expense</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete this expense?</string>
    <string name="total_amount">Total Amount:</string>
    <string name="no_data_available">No expense available</string>

</resources>