<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/add_expense_dialog_padding"
    android:background="@drawable/rect_border_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPaidBy"
        style="@style/add_exp_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Paid By:"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPaidByValue"
        style="@style/add_exp_value"
        app:layout_constraintTop_toBottomOf="@+id/tvPaidBy"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="You"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSharedBy"
        style="@style/add_exp_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Shared By:"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSharedByValue"
        style="@style/add_exp_value"
        app:layout_constraintTop_toBottomOf="@+id/tvPaidBy"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Everyone Equally"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        style="@style/et_add_exp"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvPaidByValue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        style="@style/et_add_exp"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAmount"
        style="@style/et_add_exp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDesc"
        style="@style/et_add_exp"
        android:hint="@string/description"
        android:inputType="text"
        android:gravity="top"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/etAmount"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etDesc"
        android:layout_marginTop="26dp"
        android:background="@drawable/et_rect_border_button"
        android:text="@string/save_expense"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>