<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userData"
            type="com.example.ioweyou.models.User"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rect_border_dialog"
            android:padding="@dimen/add_expense_dialog_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCross"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_close_24" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCross"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_marginTop="18dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                style="@style/add_exp_value"
                tools:text="Neeraj Yadav"
                android:text='@{userData.userName}'
                android:textSize="@dimen/tv_profile_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAge"
                style="@style/add_exp_title"
                android:text="@string/age"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAgeValue"
                style="@style/add_exp_value"
                tools:text="29"
                android:text='@{userData.age + ""}'
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGender"
                style="@style/add_exp_title"
                android:text="@string/gender"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGenderValue"
                style="@style/add_exp_value"
                tools:text="Male"
                android:text='@{userData.gender}'
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />


            <Button
                android:id="@+id/btnLogout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_logout_btn"
                android:background="@drawable/et_rect_border_button"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAgeValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>