<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="expenseData"
            type="com.example.ioweyou.models.Expenses" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ExpenseDetail">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_toolbar"
            style="@style/toolbar"
            android:layout_width="match_parent"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="16dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="3"
                    android:text='@{expenseData.title}'
                    android:textColor="@color/black"
                    android:textSize="@dimen/expense_detail_title"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Dosa at Vidhyarthi Bhawan with some one specialVidhyarthi Bhawan with some one special" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseDate"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text="@string/expense_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseDateValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.date}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseDate"
                    tools:text="Expense Date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseAmount"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text="@string/expense_amount"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseDateValue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseAmountValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.totalAmount + " INR"}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseAmount"
                    tools:text="Expense Amount" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseDesc"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text="@string/expense_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseAmountValue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseDescValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.description}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseDesc"
                    tools:text="Expense Desc" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpensePaidBy"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text="@string/expense_paid_by"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseDescValue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpensePaidByValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.paidByName}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpensePaidBy"
                    tools:text="Expense Paid By" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseSplit"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text="@string/split_equally_with"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpensePaidByValue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseSplitValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.splitWith.toString().replaceAll("\\[","").replaceAll("\\]","")}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseSplit"
                    tools:text="Split Equally With" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseYouOwe"
                    style="@style/exp_detail_title"
                    android:layout_height="0dp"
                    android:text='@{expenseData.isByYou ? "You get back" : "You owe" }'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseSplitValue"
                    tools:text="@string/expense_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpenseYouOweValue"
                    style="@style/exp_detail_title_value"
                    android:layout_height="0dp"
                    android:text='@{expenseData.isByYou ? expenseData.youGetBack + " INR" : expenseData.youOwe + " INR"}'
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseYouOwe"
                    tools:text="Expense Date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>